[package]
name = "vari"
description = "A library for formatting strings with colors and cosmetic stuff to the terminal."
version = "0.1.7"
edition = "2021"
author = ["azur1s <https://github.com/azur1s>"]
homepage = "https://github.com/azur1s/vari"
repository = "https://github.com/azur1s/vari"
license = "AGPL-3.0"
readme = "README.md"
keywords = ["color", "format", "terminal", "ansi_term", "cosmetic", "cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"
